# Agentic-Advertising-Automation-System

./: .env  .gitignore  Dockerfile  README.md  api_server.py  cloudwatch-dashboard.json  main.py  requirements.txt  task-definition.json
agentic advertising automation system/: Dockerfile  README.md  api_server.py  cloudwatch-dashboard.json  main.py  pyproject.toml  requirements.txt  task-definition.json  trial.ipynb
