[project]
name = "agentic-advertising-automation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-mqtt>=0.16.2",
    "awscli>=1.41.17",
    "boto3>=1.39.14",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "ipynb>=0.5.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.29",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langgraph>=0.6.0",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-aws>=0.1.0",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
